Fix alignment issues with project-layout

--- a/assets/css/default_layout.css
+++ b/assets/css/default_layout.css
@@ -50,6 +50,10 @@ a:hover {
   -moz-border-radius: 500px;
 }
 
+.top-padding-15 {
+  padding-top: 15px;
+}
+
 /* PAGE ALIGNMENT
 -------------------------------------------------- */
 html,
